--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
 .App {
+  max-width: 1200px;
+  min-height: calc(100vh - 2rem);
+  margin: auto;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/*  padding: 1rem;*/
+  background-color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #222;
+  background-color: #ddd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner {
+  color: #fff;
+  background-color: #357;
+}
+
+.footer {
+  font-size: 0.75rem;
+  padding: 0.5rem;
+  margin-top: auto;
+  font-weight: 300;
 }
