--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -1,9 +1,17 @@
 :root {
   --inner-border: 0.5px dashed #1117;
   --cell-border: 1.5px solid black;
+  --cell-transition-time: 0.25s;
+}
+
+.tiler {
+/*  height: 100%;*/
 }
 
 .grid {
+/* fix jitter on first load */
+  min-height: 18rem;
+/* js uses client dimension calculation*/
   padding: 0;
   margin: 1rem 2rem;
 }
@@ -13,12 +21,38 @@
   border-collapse: collapse;
   border-spacing: 0;
   margin: auto;
+  transition: width 1s, height 1s;
+}
+
+.fade-in {
+  animation: fadeIn ease 1s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-out {
+  animation: fadeOut ease 1s;
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .cell {
-  width: 20px;
-  height: 20px;
+/*  width: var(--cell-width);*/
+/*  height: var(--cell-height);*/
   background-color: #fff;
+  transition: background-color var(--cell-transition-time), border calc(var(--cell-transition-time) / 2);
   border: var(--cell-border);
 }
 
