--- a/src/components/tiler.css
+++ b/src/components/tiler.css
@@ -34,6 +34,27 @@
   opacity: .65;
 }
 
+.btn-controls {
+  text-align: center;
+  padding: .5rem .75rem;
+}
+
+.btn-group {
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle;
+}
+.btn-group>.btn:not(:last-child) {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-right: -1px;
+}
+.btn-group>.btn:not(:first-child) {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-left: -1px;
+}
+
 small, .small {
   font-size: 80%;
   font-weight: 400;
@@ -45,4 +66,55 @@ small, .small {
 
 .tiler {
   padding: 1rem;
+}
+
+.controls {
+/*  margin: 1rem auto;*/
+  padding: 1rem;
+/*  width: 40%;*/
+  background-color: #fff;
+/*  border: 1px solid #999;*/
+/*  border-radius: 1rem;*/
+}
+
+.speed-control {
+  margin: .5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider {
+  margin: .5rem 1rem;
+}
+.slider {
+  appearance: none;
+  outline: none;
+  height: 3px;
+  background-color: #a44;
+  opacity: 0.7;
+  transition: opacity .2s;
+}
+.slider:hover {
+  opacity: 1;
+}
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  cursor: pointer;
+  border: 1px solid #aaa;
+  border-radius: 8px;
+  filter: drop-shadow(0px 0px 2px #999);
+}
+.slider::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  cursor: pointer;
+  border: 1px solid #aaa;
+  border-radius: 8px;
+  filter: drop-shadow(0px 0px 2px #999);
 }
