cleaned up App page look

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+#root {
+  min-height: calc(100% - 2rem);
+  margin: 0;
+  padding: 1rem;
+}
+
 .App {
   max-width: 1200px;
   min-height: calc(100vh - 2rem);
@@ -15,6 +21,26 @@ body {
   line-height: 1.5;
   color: #222;
   background-color: #ddd;
+}
+
+
+/* like reboot */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0.25rem;
+  margin-bottom: .5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: calc(1.25rem + 2vw);
+  min-height: 0vw;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .banner {
